--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "async": "^3.2.0",
     "colors": "^1.4.0",
+    "object-hash": "^2.0.3",
     "redis": "^3.0.2"
   },
   "directories": {
